polywizparse.output
   0  $accept : %entry% $end

   1  program : decls EOF

   2  decls :
   3        | decls vdecl
   4        | decls fdecl

   5  fdecl : DEF typ ID LPAREN formals_opt RPAREN LBRACE vdecl_list stmt_list RBRACE

   6  formals_opt :
   7              | formal_list

   8  formal_list : typ ID
   9              | formal_list COMMA typ ID

  10  typ : INT
  11      | BOOL
  12      | FLOAT
  13      | VOID
  14      | STRING
  15      | typ LBRACK RBRACK

  16  vdecl_list :
  17             | vdecl_list vdecl

  18  vdecl : typ ID SEMI

  19  stmt_list :
  20            | stmt_list stmt

  21  stmt : expr SEMI
  22       | RETURN expr_opt SEMI
  23       | LBRACE stmt_list RBRACE
  24       | IF LPAREN expr RPAREN stmt
  25       | IF LPAREN expr RPAREN stmt ELSE stmt
  26       | FOR LPAREN expr_opt SEMI expr SEMI expr_opt RPAREN stmt
  27       | WHILE LPAREN expr RPAREN stmt

  28  expr_opt :
  29           | expr

  30  elements_list : expr
  31                | elements_list COMMA expr

  32  expr : LITERAL
  33       | FLIT
  34       | BLIT
  35       | SLIT
  36       | ID
  37       | LBRACK elements_list RBRACK
  38       | expr PLUS expr
  39       | expr MINUS expr
  40       | expr TIMES expr
  41       | expr DIVIDE expr
  42       | expr EXP expr
  43       | expr EQ expr
  44       | expr NEQ expr
  45       | expr LT expr
  46       | expr LEQ expr
  47       | expr GT expr
  48       | expr GEQ expr
  49       | expr AND expr
  50       | expr OR expr
  51       | ABS expr ABS
  52       | MINUS expr
  53       | NOT expr
  54       | ID ASSIGN expr
  55       | ID LPAREN args_opt RPAREN
  56       | LPAREN expr RPAREN

  57  args_opt :
  58           | args_list

  59  args_list : expr
  60            | args_list COMMA expr

  61  %entry% : '\001' program

state 0
	$accept : . %entry% $end  (0)

	'\001'  shift 1
	.  error

	%entry%  goto 2


state 1
	%entry% : '\001' . program  (61)
	decls : .  (2)

	.  reduce 2

	program  goto 3
	decls  goto 4


state 2
	$accept : %entry% . $end  (0)

	$end  accept


state 3
	%entry% : '\001' program .  (61)

	.  reduce 61


state 4
	program : decls . EOF  (1)
	decls : decls . vdecl  (3)
	decls : decls . fdecl  (4)

	INT  shift 5
	BOOL  shift 6
	FLOAT  shift 7
	VOID  shift 8
	DEF  shift 9
	STRING  shift 10
	EOF  shift 11
	.  error

	vdecl  goto 12
	fdecl  goto 13
	typ  goto 14


state 5
	typ : INT .  (10)

	.  reduce 10


state 6
	typ : BOOL .  (11)

	.  reduce 11


state 7
	typ : FLOAT .  (12)

	.  reduce 12


state 8
	typ : VOID .  (13)

	.  reduce 13


state 9
	fdecl : DEF . typ ID LPAREN formals_opt RPAREN LBRACE vdecl_list stmt_list RBRACE  (5)

	INT  shift 5
	BOOL  shift 6
	FLOAT  shift 7
	VOID  shift 8
	STRING  shift 10
	.  error

	typ  goto 15


state 10
	typ : STRING .  (14)

	.  reduce 14


state 11
	program : decls EOF .  (1)

	.  reduce 1


state 12
	decls : decls vdecl .  (3)

	.  reduce 3


state 13
	decls : decls fdecl .  (4)

	.  reduce 4


state 14
	typ : typ . LBRACK RBRACK  (15)
	vdecl : typ . ID SEMI  (18)

	LBRACK  shift 16
	ID  shift 17
	.  error


state 15
	fdecl : DEF typ . ID LPAREN formals_opt RPAREN LBRACE vdecl_list stmt_list RBRACE  (5)
	typ : typ . LBRACK RBRACK  (15)

	LBRACK  shift 16
	ID  shift 18
	.  error


state 16
	typ : typ LBRACK . RBRACK  (15)

	RBRACK  shift 19
	.  error


state 17
	vdecl : typ ID . SEMI  (18)

	SEMI  shift 20
	.  error


state 18
	fdecl : DEF typ ID . LPAREN formals_opt RPAREN LBRACE vdecl_list stmt_list RBRACE  (5)

	LPAREN  shift 21
	.  error


state 19
	typ : typ LBRACK RBRACK .  (15)

	.  reduce 15


state 20
	vdecl : typ ID SEMI .  (18)

	.  reduce 18


state 21
	fdecl : DEF typ ID LPAREN . formals_opt RPAREN LBRACE vdecl_list stmt_list RBRACE  (5)
	formals_opt : .  (6)

	INT  shift 5
	BOOL  shift 6
	FLOAT  shift 7
	VOID  shift 8
	STRING  shift 10
	RPAREN  reduce 6

	typ  goto 22
	formals_opt  goto 23
	formal_list  goto 24


state 22
	formal_list : typ . ID  (8)
	typ : typ . LBRACK RBRACK  (15)

	LBRACK  shift 16
	ID  shift 25
	.  error


state 23
	fdecl : DEF typ ID LPAREN formals_opt . RPAREN LBRACE vdecl_list stmt_list RBRACE  (5)

	RPAREN  shift 26
	.  error


state 24
	formals_opt : formal_list .  (7)
	formal_list : formal_list . COMMA typ ID  (9)

	COMMA  shift 27
	RPAREN  reduce 7


state 25
	formal_list : typ ID .  (8)

	.  reduce 8


state 26
	fdecl : DEF typ ID LPAREN formals_opt RPAREN . LBRACE vdecl_list stmt_list RBRACE  (5)

	LBRACE  shift 28
	.  error


state 27
	formal_list : formal_list COMMA . typ ID  (9)

	INT  shift 5
	BOOL  shift 6
	FLOAT  shift 7
	VOID  shift 8
	STRING  shift 10
	.  error

	typ  goto 29


state 28
	fdecl : DEF typ ID LPAREN formals_opt RPAREN LBRACE . vdecl_list stmt_list RBRACE  (5)
	vdecl_list : .  (16)

	.  reduce 16

	vdecl_list  goto 30


state 29
	formal_list : formal_list COMMA typ . ID  (9)
	typ : typ . LBRACK RBRACK  (15)

	LBRACK  shift 16
	ID  shift 31
	.  error


state 30
	fdecl : DEF typ ID LPAREN formals_opt RPAREN LBRACE vdecl_list . stmt_list RBRACE  (5)
	vdecl_list : vdecl_list . vdecl  (17)
	stmt_list : .  (19)

	INT  shift 5
	BOOL  shift 6
	FLOAT  shift 7
	VOID  shift 8
	STRING  shift 10
	LPAREN  reduce 19
	LBRACE  reduce 19
	RBRACE  reduce 19
	MINUS  reduce 19
	NOT  reduce 19
	LBRACK  reduce 19
	RETURN  reduce 19
	IF  reduce 19
	FOR  reduce 19
	WHILE  reduce 19
	ABS  reduce 19
	LITERAL  reduce 19
	BLIT  reduce 19
	ID  reduce 19
	FLIT  reduce 19
	SLIT  reduce 19

	vdecl  goto 32
	typ  goto 14
	stmt_list  goto 33


state 31
	formal_list : formal_list COMMA typ ID .  (9)

	.  reduce 9


state 32
	vdecl_list : vdecl_list vdecl .  (17)

	.  reduce 17


state 33
	fdecl : DEF typ ID LPAREN formals_opt RPAREN LBRACE vdecl_list stmt_list . RBRACE  (5)
	stmt_list : stmt_list . stmt  (20)

	LPAREN  shift 34
	LBRACE  shift 35
	RBRACE  shift 36
	MINUS  shift 37
	NOT  shift 38
	LBRACK  shift 39
	RETURN  shift 40
	IF  shift 41
	FOR  shift 42
	WHILE  shift 43
	ABS  shift 44
	LITERAL  shift 45
	BLIT  shift 46
	ID  shift 47
	FLIT  shift 48
	SLIT  shift 49
	.  error

	stmt  goto 50
	expr  goto 51


state 34
	expr : LPAREN . expr RPAREN  (56)

	LPAREN  shift 34
	MINUS  shift 37
	NOT  shift 38
	LBRACK  shift 39
	ABS  shift 44
	LITERAL  shift 45
	BLIT  shift 46
	ID  shift 47
	FLIT  shift 48
	SLIT  shift 49
	.  error

	expr  goto 52


state 35
	stmt : LBRACE . stmt_list RBRACE  (23)
	stmt_list : .  (19)

	.  reduce 19

	stmt_list  goto 53


state 36
	fdecl : DEF typ ID LPAREN formals_opt RPAREN LBRACE vdecl_list stmt_list RBRACE .  (5)

	.  reduce 5


state 37
	expr : MINUS . expr  (52)

	LPAREN  shift 34
	MINUS  shift 37
	NOT  shift 38
	LBRACK  shift 39
	ABS  shift 44
	LITERAL  shift 45
	BLIT  shift 46
	ID  shift 47
	FLIT  shift 48
	SLIT  shift 49
	.  error

	expr  goto 54


state 38
	expr : NOT . expr  (53)

	LPAREN  shift 34
	MINUS  shift 37
	NOT  shift 38
	LBRACK  shift 39
	ABS  shift 44
	LITERAL  shift 45
	BLIT  shift 46
	ID  shift 47
	FLIT  shift 48
	SLIT  shift 49
	.  error

	expr  goto 55


state 39
	expr : LBRACK . elements_list RBRACK  (37)

	LPAREN  shift 34
	MINUS  shift 37
	NOT  shift 38
	LBRACK  shift 39
	ABS  shift 44
	LITERAL  shift 45
	BLIT  shift 46
	ID  shift 47
	FLIT  shift 48
	SLIT  shift 49
	.  error

	expr  goto 56
	elements_list  goto 57


state 40
	stmt : RETURN . expr_opt SEMI  (22)
	expr_opt : .  (28)

	LPAREN  shift 34
	MINUS  shift 37
	NOT  shift 38
	LBRACK  shift 39
	ABS  shift 44
	LITERAL  shift 45
	BLIT  shift 46
	ID  shift 47
	FLIT  shift 48
	SLIT  shift 49
	SEMI  reduce 28

	expr  goto 58
	expr_opt  goto 59


state 41
	stmt : IF . LPAREN expr RPAREN stmt  (24)
	stmt : IF . LPAREN expr RPAREN stmt ELSE stmt  (25)

	LPAREN  shift 60
	.  error


state 42
	stmt : FOR . LPAREN expr_opt SEMI expr SEMI expr_opt RPAREN stmt  (26)

	LPAREN  shift 61
	.  error


state 43
	stmt : WHILE . LPAREN expr RPAREN stmt  (27)

	LPAREN  shift 62
	.  error


state 44
	expr : ABS . expr ABS  (51)

	LPAREN  shift 34
	MINUS  shift 37
	NOT  shift 38
	LBRACK  shift 39
	ABS  shift 44
	LITERAL  shift 45
	BLIT  shift 46
	ID  shift 47
	FLIT  shift 48
	SLIT  shift 49
	.  error

	expr  goto 63


state 45
	expr : LITERAL .  (32)

	.  reduce 32


state 46
	expr : BLIT .  (34)

	.  reduce 34


state 47
	expr : ID .  (36)
	expr : ID . ASSIGN expr  (54)
	expr : ID . LPAREN args_opt RPAREN  (55)

	LPAREN  shift 64
	ASSIGN  shift 65
	SEMI  reduce 36
	RPAREN  reduce 36
	COMMA  reduce 36
	PLUS  reduce 36
	MINUS  reduce 36
	TIMES  reduce 36
	DIVIDE  reduce 36
	EQ  reduce 36
	NEQ  reduce 36
	LT  reduce 36
	LEQ  reduce 36
	GT  reduce 36
	GEQ  reduce 36
	AND  reduce 36
	OR  reduce 36
	RBRACK  reduce 36
	EXP  reduce 36
	ABS  reduce 36


state 48
	expr : FLIT .  (33)

	.  reduce 33


state 49
	expr : SLIT .  (35)

	.  reduce 35


state 50
	stmt_list : stmt_list stmt .  (20)

	.  reduce 20


state 51
	stmt : expr . SEMI  (21)
	expr : expr . PLUS expr  (38)
	expr : expr . MINUS expr  (39)
	expr : expr . TIMES expr  (40)
	expr : expr . DIVIDE expr  (41)
	expr : expr . EXP expr  (42)
	expr : expr . EQ expr  (43)
	expr : expr . NEQ expr  (44)
	expr : expr . LT expr  (45)
	expr : expr . LEQ expr  (46)
	expr : expr . GT expr  (47)
	expr : expr . GEQ expr  (48)
	expr : expr . AND expr  (49)
	expr : expr . OR expr  (50)

	SEMI  shift 66
	PLUS  shift 67
	MINUS  shift 68
	TIMES  shift 69
	DIVIDE  shift 70
	EQ  shift 71
	NEQ  shift 72
	LT  shift 73
	LEQ  shift 74
	GT  shift 75
	GEQ  shift 76
	AND  shift 77
	OR  shift 78
	EXP  shift 79
	.  error


state 52
	expr : expr . PLUS expr  (38)
	expr : expr . MINUS expr  (39)
	expr : expr . TIMES expr  (40)
	expr : expr . DIVIDE expr  (41)
	expr : expr . EXP expr  (42)
	expr : expr . EQ expr  (43)
	expr : expr . NEQ expr  (44)
	expr : expr . LT expr  (45)
	expr : expr . LEQ expr  (46)
	expr : expr . GT expr  (47)
	expr : expr . GEQ expr  (48)
	expr : expr . AND expr  (49)
	expr : expr . OR expr  (50)
	expr : LPAREN expr . RPAREN  (56)

	RPAREN  shift 80
	PLUS  shift 67
	MINUS  shift 68
	TIMES  shift 69
	DIVIDE  shift 70
	EQ  shift 71
	NEQ  shift 72
	LT  shift 73
	LEQ  shift 74
	GT  shift 75
	GEQ  shift 76
	AND  shift 77
	OR  shift 78
	EXP  shift 79
	.  error


state 53
	stmt_list : stmt_list . stmt  (20)
	stmt : LBRACE stmt_list . RBRACE  (23)

	LPAREN  shift 34
	LBRACE  shift 35
	RBRACE  shift 81
	MINUS  shift 37
	NOT  shift 38
	LBRACK  shift 39
	RETURN  shift 40
	IF  shift 41
	FOR  shift 42
	WHILE  shift 43
	ABS  shift 44
	LITERAL  shift 45
	BLIT  shift 46
	ID  shift 47
	FLIT  shift 48
	SLIT  shift 49
	.  error

	stmt  goto 50
	expr  goto 51


state 54
	expr : expr . PLUS expr  (38)
	expr : expr . MINUS expr  (39)
	expr : expr . TIMES expr  (40)
	expr : expr . DIVIDE expr  (41)
	expr : expr . EXP expr  (42)
	expr : expr . EQ expr  (43)
	expr : expr . NEQ expr  (44)
	expr : expr . LT expr  (45)
	expr : expr . LEQ expr  (46)
	expr : expr . GT expr  (47)
	expr : expr . GEQ expr  (48)
	expr : expr . AND expr  (49)
	expr : expr . OR expr  (50)
	expr : MINUS expr .  (52)

	.  reduce 52


state 55
	expr : expr . PLUS expr  (38)
	expr : expr . MINUS expr  (39)
	expr : expr . TIMES expr  (40)
	expr : expr . DIVIDE expr  (41)
	expr : expr . EXP expr  (42)
	expr : expr . EQ expr  (43)
	expr : expr . NEQ expr  (44)
	expr : expr . LT expr  (45)
	expr : expr . LEQ expr  (46)
	expr : expr . GT expr  (47)
	expr : expr . GEQ expr  (48)
	expr : expr . AND expr  (49)
	expr : expr . OR expr  (50)
	expr : NOT expr .  (53)

	.  reduce 53


state 56
	elements_list : expr .  (30)
	expr : expr . PLUS expr  (38)
	expr : expr . MINUS expr  (39)
	expr : expr . TIMES expr  (40)
	expr : expr . DIVIDE expr  (41)
	expr : expr . EXP expr  (42)
	expr : expr . EQ expr  (43)
	expr : expr . NEQ expr  (44)
	expr : expr . LT expr  (45)
	expr : expr . LEQ expr  (46)
	expr : expr . GT expr  (47)
	expr : expr . GEQ expr  (48)
	expr : expr . AND expr  (49)
	expr : expr . OR expr  (50)

	PLUS  shift 67
	MINUS  shift 68
	TIMES  shift 69
	DIVIDE  shift 70
	EQ  shift 71
	NEQ  shift 72
	LT  shift 73
	LEQ  shift 74
	GT  shift 75
	GEQ  shift 76
	AND  shift 77
	OR  shift 78
	EXP  shift 79
	COMMA  reduce 30
	RBRACK  reduce 30


state 57
	elements_list : elements_list . COMMA expr  (31)
	expr : LBRACK elements_list . RBRACK  (37)

	COMMA  shift 82
	RBRACK  shift 83
	.  error


state 58
	expr_opt : expr .  (29)
	expr : expr . PLUS expr  (38)
	expr : expr . MINUS expr  (39)
	expr : expr . TIMES expr  (40)
	expr : expr . DIVIDE expr  (41)
	expr : expr . EXP expr  (42)
	expr : expr . EQ expr  (43)
	expr : expr . NEQ expr  (44)
	expr : expr . LT expr  (45)
	expr : expr . LEQ expr  (46)
	expr : expr . GT expr  (47)
	expr : expr . GEQ expr  (48)
	expr : expr . AND expr  (49)
	expr : expr . OR expr  (50)

	PLUS  shift 67
	MINUS  shift 68
	TIMES  shift 69
	DIVIDE  shift 70
	EQ  shift 71
	NEQ  shift 72
	LT  shift 73
	LEQ  shift 74
	GT  shift 75
	GEQ  shift 76
	AND  shift 77
	OR  shift 78
	EXP  shift 79
	SEMI  reduce 29
	RPAREN  reduce 29


state 59
	stmt : RETURN expr_opt . SEMI  (22)

	SEMI  shift 84
	.  error


state 60
	stmt : IF LPAREN . expr RPAREN stmt  (24)
	stmt : IF LPAREN . expr RPAREN stmt ELSE stmt  (25)

	LPAREN  shift 34
	MINUS  shift 37
	NOT  shift 38
	LBRACK  shift 39
	ABS  shift 44
	LITERAL  shift 45
	BLIT  shift 46
	ID  shift 47
	FLIT  shift 48
	SLIT  shift 49
	.  error

	expr  goto 85


state 61
	stmt : FOR LPAREN . expr_opt SEMI expr SEMI expr_opt RPAREN stmt  (26)
	expr_opt : .  (28)

	LPAREN  shift 34
	MINUS  shift 37
	NOT  shift 38
	LBRACK  shift 39
	ABS  shift 44
	LITERAL  shift 45
	BLIT  shift 46
	ID  shift 47
	FLIT  shift 48
	SLIT  shift 49
	SEMI  reduce 28

	expr  goto 58
	expr_opt  goto 86


state 62
	stmt : WHILE LPAREN . expr RPAREN stmt  (27)

	LPAREN  shift 34
	MINUS  shift 37
	NOT  shift 38
	LBRACK  shift 39
	ABS  shift 44
	LITERAL  shift 45
	BLIT  shift 46
	ID  shift 47
	FLIT  shift 48
	SLIT  shift 49
	.  error

	expr  goto 87


state 63
	expr : expr . PLUS expr  (38)
	expr : expr . MINUS expr  (39)
	expr : expr . TIMES expr  (40)
	expr : expr . DIVIDE expr  (41)
	expr : expr . EXP expr  (42)
	expr : expr . EQ expr  (43)
	expr : expr . NEQ expr  (44)
	expr : expr . LT expr  (45)
	expr : expr . LEQ expr  (46)
	expr : expr . GT expr  (47)
	expr : expr . GEQ expr  (48)
	expr : expr . AND expr  (49)
	expr : expr . OR expr  (50)
	expr : ABS expr . ABS  (51)

	PLUS  shift 67
	MINUS  shift 68
	TIMES  shift 69
	DIVIDE  shift 70
	EQ  shift 71
	NEQ  shift 72
	LT  shift 73
	LEQ  shift 74
	GT  shift 75
	GEQ  shift 76
	AND  shift 77
	OR  shift 78
	EXP  shift 79
	ABS  shift 88
	.  error


state 64
	expr : ID LPAREN . args_opt RPAREN  (55)
	args_opt : .  (57)

	LPAREN  shift 34
	MINUS  shift 37
	NOT  shift 38
	LBRACK  shift 39
	ABS  shift 44
	LITERAL  shift 45
	BLIT  shift 46
	ID  shift 47
	FLIT  shift 48
	SLIT  shift 49
	RPAREN  reduce 57

	expr  goto 89
	args_opt  goto 90
	args_list  goto 91


state 65
	expr : ID ASSIGN . expr  (54)

	LPAREN  shift 34
	MINUS  shift 37
	NOT  shift 38
	LBRACK  shift 39
	ABS  shift 44
	LITERAL  shift 45
	BLIT  shift 46
	ID  shift 47
	FLIT  shift 48
	SLIT  shift 49
	.  error

	expr  goto 92


state 66
	stmt : expr SEMI .  (21)

	.  reduce 21


state 67
	expr : expr PLUS . expr  (38)

	LPAREN  shift 34
	MINUS  shift 37
	NOT  shift 38
	LBRACK  shift 39
	ABS  shift 44
	LITERAL  shift 45
	BLIT  shift 46
	ID  shift 47
	FLIT  shift 48
	SLIT  shift 49
	.  error

	expr  goto 93


state 68
	expr : expr MINUS . expr  (39)

	LPAREN  shift 34
	MINUS  shift 37
	NOT  shift 38
	LBRACK  shift 39
	ABS  shift 44
	LITERAL  shift 45
	BLIT  shift 46
	ID  shift 47
	FLIT  shift 48
	SLIT  shift 49
	.  error

	expr  goto 94


state 69
	expr : expr TIMES . expr  (40)

	LPAREN  shift 34
	MINUS  shift 37
	NOT  shift 38
	LBRACK  shift 39
	ABS  shift 44
	LITERAL  shift 45
	BLIT  shift 46
	ID  shift 47
	FLIT  shift 48
	SLIT  shift 49
	.  error

	expr  goto 95


state 70
	expr : expr DIVIDE . expr  (41)

	LPAREN  shift 34
	MINUS  shift 37
	NOT  shift 38
	LBRACK  shift 39
	ABS  shift 44
	LITERAL  shift 45
	BLIT  shift 46
	ID  shift 47
	FLIT  shift 48
	SLIT  shift 49
	.  error

	expr  goto 96


state 71
	expr : expr EQ . expr  (43)

	LPAREN  shift 34
	MINUS  shift 37
	NOT  shift 38
	LBRACK  shift 39
	ABS  shift 44
	LITERAL  shift 45
	BLIT  shift 46
	ID  shift 47
	FLIT  shift 48
	SLIT  shift 49
	.  error

	expr  goto 97


state 72
	expr : expr NEQ . expr  (44)

	LPAREN  shift 34
	MINUS  shift 37
	NOT  shift 38
	LBRACK  shift 39
	ABS  shift 44
	LITERAL  shift 45
	BLIT  shift 46
	ID  shift 47
	FLIT  shift 48
	SLIT  shift 49
	.  error

	expr  goto 98


state 73
	expr : expr LT . expr  (45)

	LPAREN  shift 34
	MINUS  shift 37
	NOT  shift 38
	LBRACK  shift 39
	ABS  shift 44
	LITERAL  shift 45
	BLIT  shift 46
	ID  shift 47
	FLIT  shift 48
	SLIT  shift 49
	.  error

	expr  goto 99


state 74
	expr : expr LEQ . expr  (46)

	LPAREN  shift 34
	MINUS  shift 37
	NOT  shift 38
	LBRACK  shift 39
	ABS  shift 44
	LITERAL  shift 45
	BLIT  shift 46
	ID  shift 47
	FLIT  shift 48
	SLIT  shift 49
	.  error

	expr  goto 100


state 75
	expr : expr GT . expr  (47)

	LPAREN  shift 34
	MINUS  shift 37
	NOT  shift 38
	LBRACK  shift 39
	ABS  shift 44
	LITERAL  shift 45
	BLIT  shift 46
	ID  shift 47
	FLIT  shift 48
	SLIT  shift 49
	.  error

	expr  goto 101


state 76
	expr : expr GEQ . expr  (48)

	LPAREN  shift 34
	MINUS  shift 37
	NOT  shift 38
	LBRACK  shift 39
	ABS  shift 44
	LITERAL  shift 45
	BLIT  shift 46
	ID  shift 47
	FLIT  shift 48
	SLIT  shift 49
	.  error

	expr  goto 102


state 77
	expr : expr AND . expr  (49)

	LPAREN  shift 34
	MINUS  shift 37
	NOT  shift 38
	LBRACK  shift 39
	ABS  shift 44
	LITERAL  shift 45
	BLIT  shift 46
	ID  shift 47
	FLIT  shift 48
	SLIT  shift 49
	.  error

	expr  goto 103


state 78
	expr : expr OR . expr  (50)

	LPAREN  shift 34
	MINUS  shift 37
	NOT  shift 38
	LBRACK  shift 39
	ABS  shift 44
	LITERAL  shift 45
	BLIT  shift 46
	ID  shift 47
	FLIT  shift 48
	SLIT  shift 49
	.  error

	expr  goto 104


state 79
	expr : expr EXP . expr  (42)

	LPAREN  shift 34
	MINUS  shift 37
	NOT  shift 38
	LBRACK  shift 39
	ABS  shift 44
	LITERAL  shift 45
	BLIT  shift 46
	ID  shift 47
	FLIT  shift 48
	SLIT  shift 49
	.  error

	expr  goto 105


state 80
	expr : LPAREN expr RPAREN .  (56)

	.  reduce 56


state 81
	stmt : LBRACE stmt_list RBRACE .  (23)

	.  reduce 23


state 82
	elements_list : elements_list COMMA . expr  (31)

	LPAREN  shift 34
	MINUS  shift 37
	NOT  shift 38
	LBRACK  shift 39
	ABS  shift 44
	LITERAL  shift 45
	BLIT  shift 46
	ID  shift 47
	FLIT  shift 48
	SLIT  shift 49
	.  error

	expr  goto 106


state 83
	expr : LBRACK elements_list RBRACK .  (37)

	.  reduce 37


state 84
	stmt : RETURN expr_opt SEMI .  (22)

	.  reduce 22


state 85
	stmt : IF LPAREN expr . RPAREN stmt  (24)
	stmt : IF LPAREN expr . RPAREN stmt ELSE stmt  (25)
	expr : expr . PLUS expr  (38)
	expr : expr . MINUS expr  (39)
	expr : expr . TIMES expr  (40)
	expr : expr . DIVIDE expr  (41)
	expr : expr . EXP expr  (42)
	expr : expr . EQ expr  (43)
	expr : expr . NEQ expr  (44)
	expr : expr . LT expr  (45)
	expr : expr . LEQ expr  (46)
	expr : expr . GT expr  (47)
	expr : expr . GEQ expr  (48)
	expr : expr . AND expr  (49)
	expr : expr . OR expr  (50)

	RPAREN  shift 107
	PLUS  shift 67
	MINUS  shift 68
	TIMES  shift 69
	DIVIDE  shift 70
	EQ  shift 71
	NEQ  shift 72
	LT  shift 73
	LEQ  shift 74
	GT  shift 75
	GEQ  shift 76
	AND  shift 77
	OR  shift 78
	EXP  shift 79
	.  error


state 86
	stmt : FOR LPAREN expr_opt . SEMI expr SEMI expr_opt RPAREN stmt  (26)

	SEMI  shift 108
	.  error


state 87
	stmt : WHILE LPAREN expr . RPAREN stmt  (27)
	expr : expr . PLUS expr  (38)
	expr : expr . MINUS expr  (39)
	expr : expr . TIMES expr  (40)
	expr : expr . DIVIDE expr  (41)
	expr : expr . EXP expr  (42)
	expr : expr . EQ expr  (43)
	expr : expr . NEQ expr  (44)
	expr : expr . LT expr  (45)
	expr : expr . LEQ expr  (46)
	expr : expr . GT expr  (47)
	expr : expr . GEQ expr  (48)
	expr : expr . AND expr  (49)
	expr : expr . OR expr  (50)

	RPAREN  shift 109
	PLUS  shift 67
	MINUS  shift 68
	TIMES  shift 69
	DIVIDE  shift 70
	EQ  shift 71
	NEQ  shift 72
	LT  shift 73
	LEQ  shift 74
	GT  shift 75
	GEQ  shift 76
	AND  shift 77
	OR  shift 78
	EXP  shift 79
	.  error


state 88
	expr : ABS expr ABS .  (51)

	.  reduce 51


state 89
	expr : expr . PLUS expr  (38)
	expr : expr . MINUS expr  (39)
	expr : expr . TIMES expr  (40)
	expr : expr . DIVIDE expr  (41)
	expr : expr . EXP expr  (42)
	expr : expr . EQ expr  (43)
	expr : expr . NEQ expr  (44)
	expr : expr . LT expr  (45)
	expr : expr . LEQ expr  (46)
	expr : expr . GT expr  (47)
	expr : expr . GEQ expr  (48)
	expr : expr . AND expr  (49)
	expr : expr . OR expr  (50)
	args_list : expr .  (59)

	PLUS  shift 67
	MINUS  shift 68
	TIMES  shift 69
	DIVIDE  shift 70
	EQ  shift 71
	NEQ  shift 72
	LT  shift 73
	LEQ  shift 74
	GT  shift 75
	GEQ  shift 76
	AND  shift 77
	OR  shift 78
	EXP  shift 79
	RPAREN  reduce 59
	COMMA  reduce 59

